Corrección en genre.html

--- a/genre.html
+++ b/genre.html
@@ -49,7 +49,7 @@
             </a>
             <a style="display:block" href="man.html">
                 <div class="contenedor2">
-                    <img src="IMG/men.png" alt="Sexo Masculino" title="Sexo Masculino"width="535"/>
+                    <img src="IMG/man.png" alt="Sexo Masculino" title="Sexo Masculino"width="535"/>
                     <div class="txt">
                         <h1>MASCULINO</h1>
                     </div>
