Subidas las opciones

--- a/option.html
+++ b/option.html
@@ -6,26 +6,38 @@
     <meta name="viewport" content="width=device-width">
     <title>Retirement Simulator</title>
     <link rel="stylesheet" href="css/styleoption.css">
-
 </head>
 
 <body>
-    <a style="display:block" href="fondototal.html">
-        <div class="contenedor">
-            <div class="imagen">
-                <img src="IMG/option1.png" alt="CALCULAR FONDO TOTAL A LA EDAD DE JUBILACIÓN" width="800" />
+    <div class="horizontal divPadre">
+        <div class="encabezado">
+            <div class="vertical2">
+                <span><h1>SELECCIONE UNA CARACTERÍSTICA</h1></span>
             </div>
-            <h1>CALCULAR SU FONDO PREVISIONAL A LA EDAD DE JUBILACIÓN</h1>
         </div>
-    </a>
-    <a style="display:block" href="ahorro.html">
-        <div class="contenedor">
-            <div class="imagen">
-                <img src="IMG/option2.png" alt="CALCULAR APV" width="800" />
-            </div>
-            <h1>CALCULAR CUÁNTO DEBE AHORRAR PARA ALCANZAR UNA JUBILACIÓN ESPERADA</h1>
+    </div>
+    <div class="box">
+        <div class="fila0">
+            <a style="display:block" href="fondototal.html">
+                <div class="contenedor">
+                    <div class="imagen">
+                        <img src="IMG/clp.jpg" alt="CALCULAR FONDO TOTAL A LA EDAD DE JUBILACIÓN" width=100% />
+                    </div>
+                    <h1>CALCULAR SU FONDO PREVISIONAL A LA EDAD DE JUBILACIÓN</h1>
+                </div>
+            </a>
         </div>
-    </a>
+        <div class="fila1">
+            <a style="display:block" href="ahorro.html">
+                <div class="contenedor">
+                    <div class="imagen">
+                        <img src="IMG/clp2.jpg" alt="CALCULAR APV" width=100%/>
+                    </div>
+                    <h1>CALCULAR CUANTO DEBE AHORRAR PARA ALCANZAR UNA JUBILACIÓN ESPERADA</h1>
+                </div>
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
