--- a/option.html
+++ b/option.html
@@ -12,7 +12,7 @@
     <div class="horizontal divPadre">
         <div class="encabezado">
             <div class="vertical2">
-                <span><h1>SELECCIONE UNA CARACTERÍSTICA</h1></span>
+                <span><h1>SELECCIONE QUÉ DESEA CALCULAR</h1></span>
             </div>
         </div>
     </div>
