--- a/fondototal.html
+++ b/fondototal.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-        <marquee bgcolor="#FFFFFF" width="50%" scrolldelay="100" scrollamount="5" direction="left" loop="infinite">Estás viendo el ejemplo que hemos hecho nosotros.
-
-            </marquee>
+    <p><h2><span>CARGANDO...</span></h2></p>
     <div id="contenedor"></div>
     <div id="contenedor">
         <div class="loader" id="loader">Cargando...</div>
