--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-		<video id="video" autoplay="autoplay" loop>
-				<source src="IMG/Santiago.mp4" type="video/mp4"></source>
-			  </video>
+		<video id="video" autoplay muted loop>
+			<source src="IMG/Coin.mp4" type="video/mp4"></source>
+		</video>
 	<div class="container">
 		<div class="form__top">
 			<h2><span>Bienvenido a Retirement Simulator</span></h2>
