--- a/data.html
+++ b/data.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./css/reset.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 	<link rel="stylesheet" href="./css/main.css">
 	<title>Retirement Simulator</title>
 </head>
@@ -15,11 +14,11 @@
 			<h2><span>INGRESE SUS DATOS</span></h2>
 		</div>		
 		<form class="form__reg" action="option.html" >
-			<input name="Edad" id="Edad" class="input" minlenght="2" maxlenght ="2" type=number placeholder="&#128100;  Edad" required autofocus>
-			<input name="ValorT" id="ValorT" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#9993;  Valor total de sus fondos (en CLP)" required>
-			<input name="MCV" id="MCV" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Monto de cotización voluntaria" required>
-			<input name="SIP" id="SIP" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Sueldo imponible proyectado" required>
-			<input name="AFP" id="AFP" class="input" minlenght="3" maxlenght ="9" type="text" placeholder="&#8962;  AFP" required>
+			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght ="2" type=number placeholder="&#128100;  Ej: 46" required autofocus>
+			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#9993;  Ej: 1120357" required>
+			<h4><span>Monto de cotización voluntaria:</span></h4><input name="MCV" id="MCV" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Ej: 967035" required>
+			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Ej: 950000" required>
+			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght ="9" type="text" placeholder="&#8962;  Ej: Modelo" required>
 			<p>Sexo:
 				<input type="radio" class="input" name="sex" value="h" required> Hombre
     			<input type="radio" class="input" name="sex" value="m" required> Mujer
