--- a/data.html
+++ b/data.html
@@ -11,12 +11,11 @@
 
 	<div class="container">
 		<div class="form__top">
-			<h2><span>INGRESE SUS DATOS</span></h2>
+			<h2><span>INGRESA TUS DATOS</span></h2>
 		</div>		
-		<form class="form__reg" action="option.html" >
+		<form class="form__reg" action="option.html">
 			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght ="2" type=number placeholder="&#128100;  Ej: 46" required autofocus>
 			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#9993;  Ej: 1120357" required>
-			<h4><span>Monto de cotización voluntaria:</span></h4><input name="MCV" id="MCV" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Ej: 967035" required>
 			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Ej: 950000" required>
 			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght ="9" type="text" placeholder="&#8962;  Ej: Modelo" required>
 			<p>Sexo:
