--- a/option.html
+++ b/option.html
@@ -12,7 +12,7 @@
     <div class="horizontal divPadre">
         <div class="encabezado">
             <div class="vertical2">
-                <span><h1>SELECCIONE QUÉ DESEA CALCULAR</h1></span>
+                <span><h1>SELECCIONA QUE DESEAS CALCULAR</h1></span>
             </div>
         </div>
     </div>
@@ -23,7 +23,7 @@
                     <div class="imagen">
                         <img src="IMG/clp.jpg" alt="CALCULAR FONDO TOTAL A LA EDAD DE JUBILACIÓN" width=100% />
                     </div>
-                    <h1>CALCULAR SU FONDO PREVISIONAL A LA EDAD DE JUBILACIÓN</h1>
+                    <h1>CALCULA TU FONDO PREVISIONAL A LA EDAD DE JUBILACIÓN</h1>
                 </div>
             </a>
         </div>
@@ -33,7 +33,7 @@
                     <div class="imagen">
                         <img src="IMG/clp2.jpg" alt="CALCULAR APV" width=100%/>
                     </div>
-                    <h1>CALCULAR CUANTO DEBE AHORRAR PARA ALCANZAR UNA JUBILACIÓN ESPERADA</h1>
+                    <h1>CALCULAR CUANTO DEBES AHORRAR PARA ALCANZAR UNA JUBILACIÓN ESPERADA</h1>
                 </div>
             </a>
         </div>
