adding funds & jub functions

--- a/fondototal.html
+++ b/fondototal.html
@@ -18,10 +18,14 @@
             <h2><span>RESULTADO:</span></h2>
         </div>
         <form class="form__reg" action="javascript:history.back()">
-            <h4><span>Valor total de sus fondos a la edad de jubilación (en CLP):</span></h4><input name="ValorTotal"
-                id="ValorTl" class="output" style="min-width: 100%; width: 100%;" type="number">
-            <h4><span>Jubilación:</span></h4><input name="JB" id="Jubilación" class="output"
-                style="min-width: 100%; width: 100%;" type="number">
+            <h4>
+                <span>Valor total de sus fondos a la edad de jubilación (en CLP):</span>
+                <span id="funds"></span>
+            </h4>
+            <h4>
+                <span>Jubilación:</span>
+                <span id="jub"></span>
+            </h4>
             <div class="btn__form">
                 <input class="btn__submit" type='submit' value="VOLVER ATRÁS">
             </div>
