--- a/data.html
+++ b/data.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,28 +8,36 @@
 	<link rel="stylesheet" href="./css/main.css">
 	<title>Retirement Simulator</title>
 </head>
+
 <body>
 
 	<div class="container">
 		<div class="form__top">
 			<h2><span>INGRESA TUS DATOS</span></h2>
-		</div>		
-		<form class="form__reg" action="option.html">
-			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght ="2" type=number placeholder="&#128100;  Ej: 46" required autofocus>
-			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#9993;  Ej: 1120357" required>
-			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input" style="min-width: 100%; width: 100%;"  type="number" placeholder="&#128222;  Ej: 950000" required>
-			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght ="9" type="text" placeholder="&#8962;  Ej: Plan Vital" required>
+		</div>
+		<form class="form__reg" action="option.html" id="formulario">
+			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght="2"
+				type=number placeholder="&#128100;  Ej: 46" required autofocus>
+			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input"
+				style="min-width: 100%; width: 100%;" type="number" placeholder="&#9993;  Ej: 1120357" required>
+			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input"
+				style="min-width: 100%; width: 100%;" type="number" placeholder="&#128222;  Ej: 950000" required>
+			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght="9" type="text"
+				placeholder="&#8962;  Ej: Plan Vital" required>
 			<p>Sexo:
 				<input type="radio" class="input" name="sex" value="h" required> Hombre
-    			<input type="radio" class="input" name="sex" value="m" required> Mujer
-  			</p>
+				<input type="radio" class="input" name="sex" value="m" required> Mujer
+			</p>
 
-            <div class="btn__form">
-            	<input class="btn__submit" type="submit" value="REGISTRAR">
-            	<input class="btn__reset" type="reset" value="VOLVER A INGRESAR DATOS">	
-            </div>
+			<div class="btn__form">
+				<input class="btn__submit" id="btnSubmit" type="submit" value="REGISTRAR">
+				<input class="btn__reset" type="reset" value="VOLVER A INGRESAR DATOS">
+			</div>
 		</form>
 	</div>
-	
+
+	<script src="js/scriptdata.js"></script>
+
 </body>
+
 </html>
