--- a/data.html
+++ b/data.html
@@ -10,23 +10,22 @@
 </head>
 
 <body>
-
 	<div class="container">
 		<div class="form__top">
 			<h2><span>INGRESA TUS DATOS</span></h2>
 		</div>
-		<form class="form__reg" action="option.html" id="formulario">
+		<form class="form__reg" action="option.html" id="formulario" autocomplete = "off">
 			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght="2"
-				type=number placeholder="&#128100;  Ej: 46" required autofocus>
+				type=number min=18 max=65 placeholder="&#128100;  Ej: 46" required autofocus>
 			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input"
-				style="min-width: 100%; width: 100%;" type="number" placeholder="&#9993;  Ej: 1120357" required>
+				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#9993;  Ej: 1120357" required>
 			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input"
-				style="min-width: 100%; width: 100%;" type="number" placeholder="&#128222;  Ej: 950000" required>
+				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#128222;  Ej: 950000" required>
 			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght="9" type="text"
 				placeholder="&#8962;  Ej: Plan Vital" required>
 			<p>Sexo:
-				<input type="radio" class="input" name="sex" value="h" required> Hombre
-				<input type="radio" class="input" name="sex" value="m" required> Mujer
+				<input type="radio" class="input" name="sex" value="m" required> Hombre
+				<input type="radio" class="input" name="sex" value="f" required> Mujer
 			</p>
 
 			<div class="btn__form">
@@ -35,6 +34,7 @@
 			</div>
 		</form>
 	</div>
+
 
 	<script src="js/scriptdata.js"></script>
 
