--- a/data.html
+++ b/data.html
@@ -17,7 +17,7 @@
 		<form class="form__reg" action="option.html" id="formulario" autocomplete = "off">
 			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght="2"
 				type=number min=18 max=65 placeholder="&#128100;  Ej: 46" required autofocus>
-			<h4><span>Valor total de sus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input"
+			<h4><span>Valor total de tus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input"
 				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#9993;  Ej: 1120357" required>
 			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input"
 				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#128222;  Ej: 950000" required>
