--- a/data.html
+++ b/data.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/main.css">
 	<title>Retirement Simulator</title>
+	<link rel="icon" type="image/ico" href="IMG/rs.ico"/>
 </head>
 
 <body>
@@ -16,16 +17,16 @@
 		</div>
 		<form class="form__reg" action="option.html" id="formulario" autocomplete = "off">
 			<h4><span>Edad:</span></h4><input name="Edad" id="Edad" class="input" minlenght="2" maxlenght="2"
-				type=number min=18 max=64 placeholder="&#128100;  Ej: 46" required autofocus>
+				type=number min=18 max=64 placeholder="&#128220;  Ej: 46" required autofocus>
 			<h4><span>Valor total de tus fondos (en CLP):</span></h4><input name="ValorT" id="ValorT" class="input"
-				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#9993;  Ej: 1120357" required>
+				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#128181;  Ej: 1120357" required>
 			<h4><span>Sueldo imponible proyectado:</span></h4><input name="SIP" id="SIP" class="input"
-				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#128222;  Ej: 950000" required>
+				style="min-width: 100%; width: 100%;" type="number" min=0 placeholder="&#128181;  Ej: 950000" required>
 			<h4><span>AFP:</span></h4><input name="AFP" id="AFP" class="input" minlenght="3" maxlenght="9" type="text"
-				placeholder="&#8962;  Ej: Plan Vital" required>
+				placeholder="&#127963; Ej: Plan Vital" required>
 			<p>Sexo:
-				<input type="radio" class="input" name="sex" value="m" required> Hombre
-				<input type="radio" class="input" name="sex" value="f" required> Mujer
+					&#129492;<input type="radio" class="input" name="sex" value="m"  required> Masculino
+					&#128105;<input type="radio" class="input" name="sex" value="f" required> Femenino
 			</p>
 
 			<div class="btn__form">
