--- a/fondototal.html
+++ b/fondototal.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Retirement Simulator</title>
     <link rel="stylesheet" href="css/stylefondo.css">
+    <link rel="icon" type="image/ico" href="IMG/rs.ico"/>
 </head>
 
 <body>
@@ -18,14 +19,14 @@
             <h2><span>RESULTADO:</span></h2>
         </div>
         <form class="form__reg" action="javascript:history.back()">
-            <h4>
-                <span>Valor total de sus fondos a la edad de jubilación (en CLP):</span>
+            <h3>
+                    &#128181;<span>Valor total de tus fondos a la edad de jubilación (en CLP): </span>
                 <span id="funds"></span>
-            </h4>
-            <h4>
-                <span>Jubilación:</span>
+            </h3>
+            <h3>
+                    &#128181;<span>Jubilación:</span>
                 <span id="jub"></span>
-            </h4>
+            </h3>
             <div class="btn__form">
                 <input class="btn__submit" type='submit' value="VOLVER ATRÁS">
             </div>
