--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet">
 	<link rel="stylesheet" href="./css/styleindex.css">
 	<title>Retirement Simulator</title>
+	<link rel="icon" type="image/ico" href="IMG/rs.ico"/>
 </head>
 
 <body>
@@ -14,8 +15,9 @@
 		</video>
 	<div class="container">
 		<div class="form__top">
-			<h2><span>Bienvenido a Retirement Simulator</span></h2>
+			<h2><span>Bienvenido a </span></h2>
 		</div>		
+		<img src="IMG/rs.png">
 		<form class="form__reg" action="data.html">
         <div class="btn__form">
             <input class="btn__submit" type="submit" value="Comenzar">
