--- a/option.html
+++ b/option.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Retirement Simulator</title>
     <link rel="stylesheet" href="css/styleoption.css">
+    <link rel="icon" type="image/ico" href="IMG/rs.ico"/>
 </head>
 
 <body>
